# wxw_cpp_meson_template

./: .env  .gitmodules  README.md  build.sh  compile_flags.txt  cross_build.txt  install.sh  main.cpp  meson.build  nativefile.ini  run.sh  setup-win-env.ps1  setup.sh  uninstall.sh  update_compiler_flags.sh  vcpkg.json
custom-triplets/: x64-linux.cmake
resources/: info.plist
resources/macos/: icon.icns  info.plist
src/: application.cpp  application.hpp  mainwindow.cpp  mainwindow.hpp  meson.build
src/core/: meson.build
src/core/database/: meson.build
src/core/database/databasemanager/: databasemanager.cpp  databasemanager.hpp  meson.build
src/gui/: mainwindow.cpp  meson.build
src/gui/mainwindow/: meson.build
subprojects/sqlite-amalgamation-3420000/: .meson-subproject-wrap-hash.txt
